--- a/_includes/script.html
+++ b/_includes/script.html
@@ -15,7 +15,7 @@
     theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
     transition: Reveal.getQueryHash().transition || {% if site.reveal.transition %}'{{ site.reveal.transition }}',{% else %}'default',{% endif %} // default/cube/page/concave/zoom/linear/fade/none
 
-    // Optional libraries used to extend on reveal.js
+    // Optional libraries used to extend on reveal.js new comments
     dependencies: [
       // Cross-browser shim that fully implements classList - https://github.com/eligrey/classList.js/
       { src: baseUrl + '/reveal.js/lib/js/classList.js', condition: function() { return !document.body.classList; } },
